--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <option>हिन्दी</option>
                 </select>
                 <a class="Sign" href="https://www.netflix.com/in/login"><button>Sign In</button></a>
-                <a class="video" href="https://video-playlist-0.netlify.app"><button>Video Playlist</button></a>
+                <a class="Video" href="https://video-playlist-0.netlify.app"><button>Video Playlist</button></a>
             </div>
         </nav>
         <div class="header-content">
