--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <nav>
-            <img src="/images/logo.png" alt="" class="logo">
+            <img src="images/logo.png" alt="" class="logo">
             <div>
                 <select name="languages" class="lang-btn">
                     <option>English</option>
@@ -37,14 +37,14 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="/images/feature-1.png" alt="">
+                <img src="images/feature-1.png" alt="">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="/images/mobile.jpg" alt="">
+                <img src="images/mobile.jpg" alt="">
                 <div class="stranger">
-                    <img src="/images/boxshot.png" alt="">
+                    <img src="images/boxshot.png" alt="">
                     <h4>Stranger Things <br> <span>Downloading.....</span></h4>
                     <img src="/images/download-icon.gif" alt="">
                 </div>
@@ -60,12 +60,12 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="img-col">
-                <img src="/images/feature-3.png" alt="">
+                <img src="images/feature-3.png" alt="">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="/images/feature-4.png" alt="">
+                <img src="images/feature-4.png" alt="">
             </div>
             <div class="text-col">
                 <h2>Create profiles for kids</h2>
