--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="stranger">
                     <img src="images/boxshot.png" alt="">
                     <h4>Stranger Things <br> <span>Downloading.....</span></h4>
-                    <img src="/images/download-icon.gif" alt="">
+                    <img src="images/download-icon.gif" alt="">
                 </div>
             </div>
             <div class="text-col">
