--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <h1>Unlimited movies, TV shows and more</h1>
             <h3>Watch anywhere. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
-            <form class="email-signup">
+            <div class="email-signup">
                 <input type="email" placeholder="Email address" required>
                 <button class="submit">Get Started</button>
-            </form>
+            </div>
         </div>
     </div>
 
@@ -124,10 +124,10 @@
             </li>
         </ul>
         <small>Ready to watch? Enter your email to create or restart your membership.</small>
-        <form class="email-signup">
+        <div class="email-signup">
             <input type="email" placeholder="Email address" required>
             <button class="submit">Get Started</button>
-        </form>
+        </div>
     </div>
     <div class="footer">
         <h2>Question: call 000-800-919-1694</h2>
