--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Watch anywhere. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <div class="email-signup">
-                <input type="email" placeholder="Email address" required>
+                <input placeholder="Email address">
                 <button class="submit">Get Started</button>
             </div>
         </div>
@@ -125,7 +125,7 @@
         </ul>
         <small>Ready to watch? Enter your email to create or restart your membership.</small>
         <div class="email-signup">
-            <input type="email" placeholder="Email address" required>
+            <input placeholder="Email address" required>
             <button class="submit">Get Started</button>
         </div>
     </div>
