--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Watch anywhere. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <div class="email-signup">
-                <input placeholder="Email address">
+                <input type="email" placeholder="Email address">
                 <button class="submit">Get Started</button>
             </div>
         </div>
@@ -125,7 +125,7 @@
         </ul>
         <small>Ready to watch? Enter your email to create or restart your membership.</small>
         <div class="email-signup">
-            <input placeholder="Email address" required>
+            <input type="email" placeholder="Email address">
             <button class="submit">Get Started</button>
         </div>
     </div>
@@ -133,22 +133,22 @@
         <h2>Question: call 000-800-919-1694</h2>
         <div class="row">
             <div class="col">
-                <a href="#">FAQ</a>
-                <a href="#">Investor Relations</a>
-                <a href="#">Privacy</a>
-                <a href="#">Speed Test</a>
+                <a href="https://help.netflix.com/en/node/412">FAQ</a>
+                <a href="https://ir.netflix.net/ir-overview/profile/default.aspx">Investor Relations</a>
+                <a href="https://help.netflix.com/legal/privacy">Privacy</a>
+                <a href="https://fast.com/">Speed Test</a>
             </div>
             <div class="col">
-                <a href="#">Help Center</a>
-                <a href="#">Jobs</a>
-                <a href="#">Cookies</a>
-                <a href="#">Legal Notices</a>
+                <a href="https://help.netflix.com/en/">Help Center</a>
+                <a href="https://jobs.netflix.com/">Jobs</a>
+                <a href="https://media.netflix.com/en/">Media Centre</a>
+                <a href="https://help.netflix.com/legal/notices">Legal Notices</a>
             </div>
             <div class="col">
-                <a href="#">Account</a>
-                <a href="#">Ways to Watch</a>
-                <a href="#">Corporate Information</a>
-                <a href="#">Only on Netflix</a>
+                <a href="https://www.netflix.com/in/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount">Account</a>
+                <a href="https://devices.netflix.com/en/">Ways to Watch</a>
+                <a href="https://help.netflix.com/legal/corpinfo">Corporate Information</a>
+                <a href="https://www.netflix.com/in/browse/genre/839338">Only on Netflix</a>
             </div>
         </div>
         <select name="languages" class="lang-btn">
