--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="header">
         <nav>
-            <img src="./images/logo.png" alt="" class="logo">
+            <img src="/images/logo.png" alt="" class="logo">
             <div>
                 <select name="languages" class="lang-btn">
                     <option>English</option>
                     <option>हिन्दी</option>
                 </select>
                 <a class="Sign" href="https://www.netflix.com/in/login"><button>Sign In</button></a>
-                <a class="Video" href="https://video-playlist-0.netlify.app"><button>Video Playlist</button></a>
+                <a class="video" href="https://video-playlist-0.netlify.app"><button>Video Playlist</button></a>
             </div>
         </nav>
         <div class="header-content">
@@ -24,7 +24,7 @@
             <h3>Watch anywhere. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <div class="email-signup">
-                <input type="email" name="email" id="mail" placeholder="Email address">
+                <input type="email" id="name" name="name" placeholder="Email address" required>
                 <button class="submit">Get Started</button>
             </div>
         </div>
@@ -36,17 +36,19 @@
                 <h2>Enjoy on your TV</h2>
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
-            <div class="img-col">
-                <img src="images/feature-1.png" alt="">
+            <div class="img-col img-video-container">
+                <!-- <img src="/images/feature-1.png" alt=""> -->
+                <img src="/images/tv.png" alt="Netflix TV" class="video-img">
+                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="/images/1.m4v" type="video/mp4"></video>
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="images/mobile.jpg" alt="">
+                <img src="/images/mobile.jpg" alt="">
                 <div class="stranger">
-                    <img src="images/boxshot.png" alt="">
+                    <img src="/images/boxshot.png" alt="">
                     <h4>Stranger Things <br> <span>Downloading.....</span></h4>
-                    <img src="images/download-icon.gif" alt="">
+                    <img src="/images/download-icon.gif" alt="">
                 </div>
             </div>
             <div class="text-col">
@@ -59,13 +61,14 @@
                 <h2>Watch everywhere</h2>
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
-            <div class="img-col">
-                <img src="images/feature-3.png" alt="">
+            <div class="img-col img-video-container">
+                <!-- <img src="/images/feature-1.png" alt=""> -->
+                <img src="/images/4.png" alt="Netflix TV" class="video-img">
+                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="/images/2.m4v" type="video/mp4"></video>
             </div>
-        </div>
         <div class="row">
             <div class="img-col">
-                <img src="images/feature-4.png" alt="">
+                <img src="/images/feature-4.png" alt="">
             </div>
             <div class="text-col">
                 <h2>Create profiles for kids</h2>
@@ -73,7 +76,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div class="faq">
         <h2>Frequently Asked Questions</h2>
         <ul class="accordion">
@@ -125,7 +128,7 @@
         </ul>
         <small>Ready to watch? Enter your email to create or restart your membership.</small>
         <div class="email-signup">
-            <input type="email" name="email" id="mail" placeholder="Email address">
+            <input type="email" placeholder="Email address" required>
             <button class="submit">Get Started</button>
         </div>
     </div>
@@ -133,22 +136,22 @@
         <h2>Question: call 000-800-919-1694</h2>
         <div class="row">
             <div class="col">
-                <a href="https://help.netflix.com/en/node/412">FAQ</a>
-                <a href="https://ir.netflix.net/ir-overview/profile/default.aspx">Investor Relations</a>
-                <a href="https://help.netflix.com/legal/privacy">Privacy</a>
-                <a href="https://fast.com/">Speed Test</a>
+                <a href="#">FAQ</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Privacy</a>
+                <a href="#">Speed Test</a>
             </div>
             <div class="col">
-                <a href="https://help.netflix.com/en/">Help Center</a>
-                <a href="https://jobs.netflix.com/">Jobs</a>
-                <a href="https://media.netflix.com/en/">Media Centre</a>
-                <a href="https://help.netflix.com/legal/notices">Legal Notices</a>
+                <a href="#">Help Center</a>
+                <a href="#">Jobs</a>
+                <a href="#">Cookies</a>
+                <a href="#">Legal Notices</a>
             </div>
             <div class="col">
-                <a href="https://www.netflix.com/in/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount">Account</a>
-                <a href="https://devices.netflix.com/en/">Ways to Watch</a>
-                <a href="https://help.netflix.com/legal/corpinfo">Corporate Information</a>
-                <a href="https://www.netflix.com/in/browse/genre/839338">Only on Netflix</a>
+                <a href="#">Account</a>
+                <a href="#">Ways to Watch</a>
+                <a href="#">Corporate Information</a>
+                <a href="#">Only on Netflix</a>
             </div>
         </div>
         <select name="languages" class="lang-btn">
