--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="img-col img-video-container">
                 <!-- <img src="/images/feature-1.png" alt=""> -->
-                <img src="/images/tv.png" alt="Netflix TV" class="video-img">
-                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="/images/1.m4v" type="video/mp4"></video>
+                <img src="images/tv.png" alt="Netflix TV" class="video-img">
+                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="images/1.m4v" type="video/mp4"></video>
             </div>
         </div>
         <div class="row">
@@ -63,8 +63,8 @@
             </div>
             <div class="img-col img-video-container">
                 <!-- <img src="/images/feature-1.png" alt=""> -->
-                <img src="/images/4.png" alt="Netflix TV" class="video-img">
-                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="/images/2.m4v" type="video/mp4"></video>
+                <img src="images/4.png" alt="Netflix TV" class="video-img">
+                <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="images/2.m4v" type="video/mp4"></video>
             </div>
         <div class="row">
             <div class="img-col">
