--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="/images/mobile.jpg" alt="">
+                <img src="images/mobile.jpg" alt="">
                 <div class="stranger">
-                    <img src="/images/boxshot.png" alt="">
+                    <img src="images/boxshot.png" alt="">
                     <h4>Stranger Things <br> <span>Downloading.....</span></h4>
-                    <img src="/images/download-icon.gif" alt="">
+                    <img src="images/download-icon.gif" alt="">
                 </div>
             </div>
             <div class="text-col">
@@ -68,7 +68,7 @@
             </div>
         <div class="row">
             <div class="img-col">
-                <img src="/images/feature-4.png" alt="">
+                <img src="images/feature-4.png" alt="">
             </div>
             <div class="text-col">
                 <h2>Create profiles for kids</h2>
