--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <nav>
-            <img src="/images/logo.png" alt="" class="logo">
+            <img src="images/logo.png" alt="" class="logo">
             <div>
                 <select name="languages" class="lang-btn">
                     <option>English</option>
